--- a/config/database.yml
+++ b/config/database.yml
@@ -21,11 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: mysql2
+  adapter: pg
   encoding: utf8
-  reconnect: false
-  database: <%= ENV["MYSQL_DATABASE"] %>
-  pool: 5
-  username: <%= ENV["MYSQL_USERNAME"] %>
-  password: <%= ENV["MYSQL_PASSWORD"] %>
-  host: <%= ENV["MYSQL_HOST"] %>
