--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ databases:
 
 services:
   - type: web
-    name: real_world_rpg_db
+    name: real-world-rpg
     env: ruby
     region: singapore
     buildCommand: "./bin/render-build.sh"
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: <%= ENV['DATABASE_URL'] %>
         fromDatabase:
-          name: render_app
+          name: real_world_rpg
           property: connectionString
       - key: <%= ENV['RAILS_MASTER_KEY'] %>
         sync: false
