--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
 {
   "name": "real_rpg",
   "private": true,
-  "dependencies": {
-    "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^7.3.0",
-    "esbuild": "^0.19.0"
-  },
-  "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets"
-  }
+  "dependencies": {}
 }
